apps/avalon-tunnel/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: avalon-gateway
  namespace: default
  labels:
    app: avalon-tunnel
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: avalon-tunnel
  type: ClusterIP
